# velaris

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
src/: main.tsx
src-tauri/: Cargo.toml  riot-api-key.txt  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: lcu.rs  lib.rs  live_client.rs  main.rs  riot_api.rs  riot_commands.rs
src/app/: App.tsx  router.tsx  routes.tsx
src/app/components/: AnimatedNumber.tsx  ChampionDrawer.tsx  CommandMenu.tsx  ConfirmDialog.tsx  DailyLPGoal.tsx  DataExport.tsx  DeathMap.tsx  DeferredChart.tsx  DuoSynergy.tsx  DuoTrackerWidget.tsx  EmptyState.tsx  ErrorBoundary.tsx  ErrorState.tsx  GameTimeline.tsx  GoalsSummaryWidget.tsx  ItemBuildDisplay.tsx  KeyboardShortcuts.tsx  LPTrackerWidget.tsx  LaneComparison.tsx  Layout.tsx  LoadingScreen.tsx  MarkdownPreview.tsx  MiniCalendarWidget.tsx  NotificationPanel.tsx  OnboardingTour.tsx  OnboardingWizard.tsx  PageHeader.tsx  PreGameBriefing.tsx  ProfileDropdown.tsx  RuneTreeDisplay.tsx  SessionTracker.tsx  SetupWizard.tsx  Skeletons.tsx  TiltAlertBanner.tsx  TiltBreakModal.tsx  TiltCard.tsx  TiltTracker.tsx  VelarisIcon.tsx  (+6 more)
src/imports/: lol-companion-design-doc.md  lol-companion-design-guide.md  lol-companion-loading.md  lol-companion-proposal.md  preview.html  velaris-onboarding-flow.md
src/styles/: fonts.css  index.css  tailwind.css  theme.css
website/: index.html  privacy.html  riot.txt  terms.html
(+97 files in other folders)
