[package]
name = "velaris"
version = "0.1.0"
description = "Velaris - League of Legends Companion"
authors = ["you"]
edition = "2021"

[lib]
name = "velaris_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri-plugin-autostart = "2"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["native-tls", "json"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
dirs = "6.0.0"
urlencoding = "2.1.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_Graphics_Dwm", "Win32_UI_Controls"] }
